--- a/index.qmd
+++ b/index.qmd
@@ -278,5 +278,7 @@ This visualization shows percentage of recyclable and non-recyclable pollutants 
 
 ### Discussion
 
-Talk about results here, what you gained from the graph
+From both visualizations we can see the steady trend of pollutants moving from non-recyclables to recyclables, or the amount of non-recyclable pollutants decreasing. This says that the environmental movements are having a positive impact on the type of pollutants that are being found in rivers. This first visualization shows that the first two environmental movements have no impact or actually a negative impact on the quantity of pollutants found in rivers in general, both of these environmental moments were government movements (IPCC fifth assessment report being submtited and the paris agreement being signed). While the populous movement of Greta Thunberg seemed to have the opposite effect and actually lowered quantities of pollutants that were found in rivers.
+
+The second visualization backs up all the insights gained from the first visualization. However, this visualization clearly shows that the first national clean up day had a negative impact on the ratio of non-recyclables to recyclables. When pairing this information with the first plot, we can see that the amount of recyclable pollutants decreased much further as a response to the first national clean up day, when compared to the amount of non-recyclable pollutants.
 
